# gf-utils

./: .gitignore  pyproject.toml  setup.py
gf_data_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gf_utils/: asset_extractor.py  crypto.py  data_miner.py  download.py  format_stc.py  stc_data.py  text_table.py
gf_utils/gamedata/: gamedata.py
gf_utils/gamedata/table/: __init__.py  _base.py  achievement.py  ally_team.py  auto_formation.py  auto_mission.py  battle_action_config.py  battle_buff.py  battle_creation.py  battle_formula.py  battle_hurt_config.py  battle_movement_info.py  battle_skill_config.py  battle_skill_type_config.py  battle_target_select_ai.py  battle_trigger.py  battle_watch.py  battle_watch_trigger.py  bingo_info.py  bingo_task_info.py  bingo_task_type.py  bondage_lines.py  building.py  career_quest.py  career_quest_grade.py  career_quest_group.py  carnival_goto_page_info.py  carnival_info.py  carnival_label_info.py  carnival_task_info.py  carnival_task_type.py  chat_channel.py  chat_fix_phrases.py  chess_buff.py  chess_camp_type.py  chess_chip.py  chess_chip_target_select.py  chess_choice_stage.py  chess_creation_perform.py  chess_enemy.py  (+202 more)
gf_utils2/gamedata/: __init__.py  gamedata.py  inspect.py  text_table.py
gf_utils2/userinfo/: base.py  gun.py  sangvis.py  squad.py  user_info.py
