[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gf-utils"
version = "0.1.2"
authors = [{name = "ZeroRin", email = "pptxp@qq.com"}]
description = """
A module includes various tools relates to 
the Girls' Frontline
"""
keywords = ["Girls' Frontline"]
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "pycryptodome",
    "logger_tt",
    "hjson",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools]
[tool.setuptools.packages.find]
include = [
    'gf_utils*', 
    'gf_utils2*',
]

[tool.isort]
profile = "black"
